v5.1.0/_sources/generated/pcdsdevices.lic.LaserInCoupling.rst.txt
pcdsdevices.lic.LaserInCoupling
===============================

.. currentmodule:: pcdsdevices.lic

.. autoclass:: LaserInCoupling

    
    
    .. list-table:: Ophyd Device Components
        :header-rows: 1
        :widths: auto

        * - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
    
        * - mirror
          - :class:`~pcdsdevices.lic.LICMirror`
          - ``:MMS:STATE``
          - Control of the mirror via saved positions.
          - hinted
          - 
    
        * - y_motor
          - :class:`~pcdsdevices.epics_motor.BeckhoffAxisNoOffset`
          - ``:MMS``
          - Direct control of the mirror motor.
          - normal
          - 
    

    
    
    
    
    

    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: configure
    .. automethod:: describe
    .. automethod:: get
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: stage_group_instances
    .. automethod:: status
    .. automethod:: stop
    .. automethod:: summary
    .. automethod:: trigger
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: configuration_attrs
    .. autoattribute:: connected
    .. autoattribute:: hints
    .. autoattribute:: kind
    .. autoattribute:: lightpath_cpts
    .. autoattribute:: needs_parent
    .. autoattribute:: stage_group
    .. autoattribute:: transmission
    
    